--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h1>Isadora Medeiros</h1>
           <i class="fa-solid fa-heart"></i>
         </div>
-        <p class="text-description">Isa, esse site é só pra mostrar o quanto eu tenho orgulho de você e para homenagear essa pessoa incrível que você é. Tudo feito com muito carinho, do jeitinho que você merece.</p>
+        <p class="text-description-pc">Isa, esse site é só pra mostrar o quanto eu tenho orgulho de você e para homenagear essa pessoa incrível que você é. Tudo feito com muito carinho, do jeitinho que você merece.</p>
         <p class="text-description-mb">Uma homenagem simples, feita com carinho, pra mostrar o quanto você é especial</p>
         <a href="src/pages/audio.html"><button class="btn-hero">Ouça</button></a>
       </div>
